@@ -25,11 +25,11 @@ along with QSpeedTest.  If not, see <http://www.gnu.org/licenses/>.
 const QString PROGRAMCOMPANY = "Binary Notion";
 const QString PROGRAMAUTHOR = "parsifal";
 const QString PROGRAMNAME = "QSpeedTest";
-const QString PROGRAMVERSION = "r7";
+const QString PROGRAMVERSION = "r8";
 const QString PROGRAMURL = "http://qspeedtest.sourceforge.net/";
 const QString PROGRAMDISCUSSURL = "https://sourceforge.net/apps/phpbb/qspeedtest/";
-const QString TARGETLISTURL = "http://qspeedtest.sourceforge.net/updates/QSpeedTest.ini";
-const QString TARGETLISTVERSIONURL = "http://qspeedtest.sourceforge.net/updates/QSpeedTest.ini.version";
+const QString TARGETLISTURL = "http://qspeedtest.sourceforge.net/updates/qspeedtest.ini";
+const QString TARGETLISTVERSIONURL = "http://qspeedtest.sourceforge.net/updates/qspeedtest.ini.version";
 const int PINGTIMEOUT = 2000;
 const int DOWNLOADTESTSECS = 20;
 int PINGSPERTARGET = 4;
